--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "SET NODE_ENV=test& jest --updateSnapshot",
     "posttest": "SET NODE_ENV=test& sequelize db:migrate:undo:all",
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js -e js,gql --ignore __tests__"
+    "dev": "nodemon -L src/server.js -e js,gql --ignore __tests__"
   },
   "keywords": [],
   "author": "",
