--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.25.0",
+    "apollo-server-express": "^2.25.1",
     "apollo-server-testing": "^2.25.0",
     "aws-sdk": "^2.928.0",
     "bcryptjs": "^2.4.3",
