--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.25.0",
-    "apollo-server-express": "^2.25.1",
+    "apollo-server-express": "^2.18.1",
     "apollo-server-testing": "^2.25.0",
     "aws-sdk": "^2.928.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
     "graphql-upload": "^12.0.0",
