--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg-hstore": "^2.3.3",
     "prettier": "^2.3.1",
     "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
