--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pretest": "SET NODE_ENV=test& sequelize db:migrate",
     "test": "SET NODE_ENV=test& jest --updateSnapshot",
     "posttest": "SET NODE_ENV=test& sequelize db:migrate:undo:all",
-    "start": "npx sequelize db:migrate && npx sequelize db:seed:all && node src/server.js",
+    "start": "npx sequelize db:migrate && node src/server.js",
     "dev": "nodemon -L src/server.js -e js,gql --ignore __tests__"
   },
   "repository": {
