--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     build: .
     ports:
       - ${PORT}:4000
-    command: npm start
+    command: npm run dev
     volumes:
       - .:/usr/app
     environment:
