--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-server-express": "^2.18.1",
     "apollo-server-testing": "^2.25.0",
     "aws-sdk": "^2.928.0",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
