--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
+    "graphql-redis-subscriptions": "^2.4.0",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.8",
