--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ version: "3"
 services:
   redis:
     image: redis
-    ports:
-      - ${REDIS_PORT}
   db:
     image: postgres
     container_name: db
@@ -20,12 +18,12 @@ services:
     build: .
     ports:
       - ${PORT}:4000
-    command: npm run dev
+    command: npm start
     volumes:
       - .:/usr/app
     environment:
       DB_HOST: db
-      REDIS_HOST: ${REDIS_HOST}
+      REDIS_HOST: redis
     depends_on:
       - db
       - redis
