--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql": "^15.5.0",
     "graphql-redis-subscriptions": "^2.4.0",
     "graphql-upload": "^12.0.0",
+    "ioredis": "^4.27.9",
     "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.8",
     "nodemailer": "^6.6.1",
